workspace/checkpoint/different_knobs_subset_10/lr_0.2/lr_decay/JT_10b/err_2.txt
  File "code/train.py", line 108
    from models.jt_q_three_layer as jt_quant 
                                 ^
SyntaxError: invalid syntax
  File "code/train.py", line 108
    from models.jt_q_three_layer import as jt_quant 
                                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "code/train.py", line 9, in <module>
    from model import get_new_model
  File "/home/bhawks/loss_landscape/loss_landscape_taxonomy/workspace/src_jet/code/model.py", line 2, in <module>
    from models.jt_q_three_layer import get_quantized_model 
  File "/home/bhawks/loss_landscape/loss_landscape_taxonomy/workspace/src_jet/code/models/jt_q_three_layer.py", line 3, in <module>
    from ..hawq.utils.quantization_utils.quant_modules import QuantAct, QuantLinear
ValueError: attempted relative import beyond top-level package
